fix: fix horiz scrollbar and other CSS issues ENT-5085 (#166)
* fix: fix horiz scrollbar

by using hidden, we will not allow scrolling right/left

* fix: CSS fix to disable checkbox resizing

* fix: constrain partner log min width

and also use vw instead of % for width

* test: fix snapshot

* fix: ensure image is shown in all screen sizes

it was only showing for large small sizes, we need to specify more breakpoints

* fix: no hero image at small, xsmall

also includes a change to avoid the paragraph looking cut prematurely at large widths

* fix: some left/right padding around content of modal

* fix: unused imports

* fix: remove left padding from full-body

--- a/src/components/catalogs/styles/_enterprise_catalogs.scss
+++ b/src/components/catalogs/styles/_enterprise_catalogs.scss
@@ -6,10 +6,12 @@
 
 .full-body {
   padding: 0px !important;
+  overflow-x: hidden; /* avoid horizontal scrollbar */
 }
 
 .padded-body {
   margin: 180px 0 0 24px;
+  padding: 0em 0.9em 0em 0em;
 }
 
 .course-info-title {
@@ -45,7 +47,8 @@
   z-index: 1;
   left: 2%;
   top: 230px;
-  width: 15%;
+  width: 12vw;
+  min-width: 200px;
   height: 70%;
   max-height: 90px;
   background-color: $light-300;
